Style button component- status and type

--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -2,6 +2,7 @@
 @import url(tokens.css);
 @import url(colors.module.css);
 @import url(typography.module.css);
+@import url(../components/button/button.css);
 
 
 
