--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -4,7 +4,7 @@
     text-align: center;
     border-radius: 8px;
     font-size: var(--font-size-body-sm);
-    padding: 1rem 2rem;
+    padding: var(--spacing-md) var(--spacing-xl);
     font-weight: var(--font-weights-bold);
     /* font-size: 14px; */
     cursor: pointer;
