--- a/src/css/tokens.css
+++ b/src/css/tokens.css
@@ -177,5 +177,22 @@
   --font-decoration-none: none;
   
 
+
+
+  /* S[acing */
+
+  --spacing-xxxs: 2px;
+  --spacing-xxs: 4px;
+  --spacing-xs: 8px;
+  --spacing-sm: 12px;
+  --spacing-md: 16px;
+  --spacing-lg: 24px;
+  --spacing-xl: 32px;
+  --spacing-xxl: 48px;
+  --spacing-xxxl: 64px;
+
+
+
+  --spacing-button: var(--spacing-xxxs) var(--spacing-xl) ;
   
 }
