--- a/src/css/tokens.css
+++ b/src/css/tokens.css
@@ -179,7 +179,7 @@
 
 
 
-  /* S[acing */
+  /* Spacing */
 
   --spacing-xxxs: 2px;
   --spacing-xxs: 4px;
@@ -191,8 +191,29 @@
   --spacing-xxl: 48px;
   --spacing-xxxl: 64px;
 
-
-
   --spacing-button: var(--spacing-xxxs) var(--spacing-xl) ;
   
+
+   /* paragraph - spacing */
+  
+   --paragraphSpaciing-body-md: 16px;
+   --paragraphSpaciing-body-lg: 20px;
+  
+
+
+
+
+
+
+    /* border - radius */
+
+    --border-radius-none: 0px;
+    --border-radius-xs: 2px;
+    --border-radius-sm: 4px;
+    --border-radius-md: 8px;
+    --border-radius-lg: 16px;
+    --border-radius-round: 50%;
+
+
+
 }
