--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -3,6 +3,8 @@
 @import url(colors.module.css);
 @import url(typography.module.css);
 @import url(../components/button/button.css);
+@import url(../components/field/field.css);
+@import url(../components/header/header.css);
 
 
 
