--- a/src/css/tokens.css
+++ b/src/css/tokens.css
@@ -153,6 +153,8 @@
   --font-line-height-body-md: 24px;
   --font-line-height-body-lg: 28px;
 
+  --font-line-height-body-default: 1.5;
+
   --font-line-height-heading-xxs: 24px;
   --font-line-height-heading-xs: 26px;
   --font-line-height-heading-sm: 28px;
@@ -199,11 +201,6 @@
    --paragraphSpaciing-body-md: 16px;
    --paragraphSpaciing-body-lg: 20px;
   
-
-
-
-
-
 
     /* border - radius */
 
