--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -5,6 +5,7 @@
 @import url(../components/button/button.css);
 @import url(../components/field/field.css);
 @import url(../components/header/header.css);
+@import url(../components/navbar/navbar.css);
 
 
 
