--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,12 +1,21 @@
 
-
-
+Header{
+    /* border-bottom: 1px solid var(--border-action) */
+}
 .header{
  display: flex;
  align-items: center;
  justify-content: space-between;
+ /* background: rgb(71, 90, 90);   */
  border-bottom: 1px solid var(--border-action)
 }
+
+/* Header svg{
+    width: 40px;
+    height: 48px;
+    
+    border: 2px solid tomato;
+} */
 
 .container{
     width: 90%;
