--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -6,6 +6,7 @@
 @import url(../components/field/field.css);
 @import url(../components/header/header.css);
 @import url(../components/navbar/navbar.css);
+@import url(../container/App.css);
 
 
 
