--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -36,7 +36,7 @@
 }
 
 li:not(:last-child) {
-    margin-bottom: 24px;
+    /* margin-bottom: 24px; */
     /* border-bottom: 1px solid var(--border-action); */
 }
 
